[project]
name = "pyutils"
version = "0.3.2"
description = ""
authors = [
    {name = "Hadrianl",email = "judong.yang@4alpha-capital.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "redis (>=5.0.4,<7.0.0)",
    "aiohttp (>=3.8.0,<4.0.0)",
    "loguru (>=0.6.0,<0.8.0)",
    "clickhouse-connect (>=0.8.11,<0.9.0)",
    "pandas (>=2.0.3,<3.0.0)",
    "orjson (>=3.9.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pyutils", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
