[tool.poetry]
name = "xclients"
version = "2.0.2"
description = "crypto exchange api client"
authors = ["Jazmine"]
readme = "README.md"
packages = [{include = "xclients"}]

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^15.0"
aiohttp = "^3.8"
orjson = "^3.9"
loguru = ">=0.6"
redis = ">=5.0.4,<7.0.0"
typing-extensions = ">=4.7.1"
aiolimiter = "^1.1.0"
pyutils = {git = "https://github.com/4alphaCapital/pyutils.git", rev = "v0.4.1"}
pydantic = "^2.11.7"
ccxt = "^4.5.1"
aiodns = "3.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.1"
mypy = "^1.1.1"
pytest = "^7.3"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
